# MindLeak

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  DEVELOPERS.md  LICENSE  Makefile  RATIONALE.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
benchmarks/baseline/: graph-correctness.json
benchmarks/results/: 2026-07-22-agent-loop-outcome.json  2026-07-22-agent-outcome-context-precision.json  2026-07-22-js-ts-import-impact.json  2026-07-22-passive-sensor-overhead.json  2026-07-22-signal-weighted-decay.json  2026-07-22-structural-reconciliation.json  2026-07-23-progressive-handoff.json  2026-07-23-two-agent-overlap.json  2026-07-24-v0.1.2-pilot-status.json  2026-07-24-v0.1.2-release-proof.json
crates/lodestar-core/: Cargo.toml
crates/lodestar-core/examples/: evaluate_handoffs.rs  evaluate_overlap.rs
crates/lodestar-core/src/: db.rs  decay.rs  design.rs  error.rs  lib.rs  llm.rs  model.rs  policy.rs  schema.sql  store.rs  util.rs
crates/lodestar-core/src/db/: functions.rs  migrations.rs
crates/lodestar-core/src/facade/: advice.rs  conformance.rs  constitution.rs  design.rs  design_materialization.rs  evidence.rs  executive.rs  knowledge.rs  mod.rs
crates/lodestar-core/src/store/: claim_transfer.rs  coordination.rs  design.rs  design_materialization.rs  design_tests.rs  goals.rs  knowledge.rs  lifecycle.rs  mod.rs  policy_packs.rs  test_support.rs
crates/lodestar-core/tests/: integration.rs
crates/lodestar-mcp/: Cargo.toml  build.rs
crates/lodestar-mcp/src/: main.rs  server.rs  tools.rs
crates/lodestar-mcp/src/tools/: conformance.rs  constitution.rs  design.rs  design_materialization.rs  evidence.rs  executive.rs  knowledge.rs  lifecycle.rs  mod.rs
crates/mindleak-core/: Cargo.toml
crates/mindleak-core/examples/: evaluate_signal.rs
crates/mindleak-core/src/: config.rs  consolidate.rs  db.rs  decay.rs  embed.rs  error.rs  graph.rs  lib.rs  model.rs  net.rs  schema.sql  telemetry.rs
crates/mindleak-core/src/facade/: consolidation.rs  ingestion.rs  lifecycle.rs  mod.rs  observability.rs  query.rs
crates/mindleak-core/src/graph/: evidence.rs  lifecycle.rs  mod.rs  query.rs  signal.rs  test_support.rs  types.rs  writes.rs
crates/mindleak-core/src/graph/evidence/: tests.rs
crates/mindleak-core/src/graph/lifecycle/: tests.rs
crates/mindleak-core/src/graph/query/: tests.rs
crates/mindleak-core/src/graph/signal/: tests.rs
crates/mindleak-core/src/graph/writes/: tests.rs
crates/mindleak-core/src/ingest/: ast.rs  execution.rs  git.rs  javascript.rs  manifest.rs  mod.rs  structure.rs
crates/mindleak-core/src/ingest/structure/: hierarchy.rs  imports.rs  mod.rs
crates/mindleak-core/tests/: integration.rs
crates/mindleak-mcp/: Cargo.toml
crates/mindleak-mcp/src/: main.rs  maintenance.rs  server.rs  tools.rs
crates/mindleak-mcp/src/maintenance/: config.rs  mod.rs  runtime.rs
crates/mindleak-mcp/src/tools/: consolidation.rs  embeddings.rs  graph.rs  ingestion.rs  lifecycle.rs  mod.rs  telemetry.rs
crates/mindleak-session/: Cargo.toml
crates/mindleak-storage/: Cargo.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA-LIFECYCLE.md  EVALUATION.md  PROOF-AND-IMPLEMENTATION-PLAN.md  QUICKSTART.md  RELEASE-NOTES.md  SPEC-CONSTITUTION.md  SPEC-INTENT.md  SPEC.md  USAGE.md  WALKTHROUGH.md
docs/adr/: 0001-record-architecture-decisions.md  0002-sqlite-decay-over-vector-llm.md  0003-agent-attribution-as-observed-edges.md  0004-intent-plane-spec-brain.md  0005-signal-weighted-decay.md  0006-structural-dependency-edges.md  0007-structural-snapshot-reconciliation.md  0008-semantic-recall-embedding-index.md  0009-evidence-backed-conformance.md  0010-observability-and-resilience.md  0011-passive-terminal-and-git-sensors.md  0012-derived-signal-evidence.md  0013-local-data-lifecycle.md  0014-per-project-decay-configuration.md  0015-advisory-symbol-leases.md  0016-platform-packaging-and-registration.md  0017-working-memory-and-autonomous-consolidation.md  0018-conflict-safe-concurrent-editing.md  0018-per-agent-worktrees-conflict-safe-editing.md  0019-task-retention-and-board-hygiene.md  0020-task-lifecycle-states.md  0021-node-lifecycle-and-reaping.md  0022-learned-knowledge-loop.md  0023-design-board-accept-bridge.md  0024-preflight-overlap-detection.md  0025-authoritative-checked-conformance.md  0026-constitutional-policy-over-mechanistic-ratchets.md  0027-extension-led-progressive-disclosure.md  0028-external-adoption-evidence-gate.md  0029-proactive-constitutional-advice.md  0030-discrete-per-agent-identity.md  0031-exportable-conformance-evidence.md  0032-single-checkout-fleet-integration.md  0033-copilot-cli-registration.md  (+1 more)
scripts/: build-info.rs  canonical-push.mjs  cargo-precommit.mjs  collision-harness.mjs  conformance-gate.mjs  conformance-gate.test.mjs  evaluate-agent-loop.mjs  evaluate-graph.mjs  evaluate-handoffs.mjs  evaluate-overlap.mjs  evaluate-sensors.mjs  evaluate-signal.mjs  isolated-push.mjs  scoped-commit.mjs
(+55 files in other folders)
