[package]
name = "lodestar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lodestar: the Intent Plane for MindLeak — durable constitution, task coordination (claim/lease), conformance, and consolidated learned knowledge."

[dependencies]
mindleak-storage = { path = "../mindleak-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
globset = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
mindleak-core = { path = "../mindleak-core" }
