[package]
name = "mindleak-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MindLeak: Temporal Context Graph Engine (TCGE) core — decay-weighted graph memory for coding agents."

[dependencies]
mindleak-storage = { path = "../mindleak-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
pep508_rs = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
