[package]
name = "mindleak-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing the MindLeak temporal context graph to coding agents over stdio."

[[bin]]
name = "mindleak-mcp"
path = "src/main.rs"

[dependencies]
mindleak-core = { path = "../mindleak-core" }
mindleak-session = { path = "../mindleak-session" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
